2010-03-12  Chris PeBenito <cpebenito@tresys.com>

	* Fix seaudit/libseaudit headers.

2010-03-01  John Oliver <joliver@tresys.com>

	* Fix error in Apol which would disable new and updated search
	  buttons in rule search.

2009-07-22  Chris PeBenito <cpebenito@tresys.com>

	* SETools 3.3.6.

2009-07-16  Chris PeBenito <cpebenito@tresys.com>

	* Change default log for seaudit to /var/log/audit/audit.log.

2009-07-16  Chris PeBenito <cpebenito@tresys.com>

	* Change context parsing in libseaudit to use libselinux functions.

2009-06-04  Jeremy Solt <jsolt@tresys.com>

	* Add support for display of level and clearance of contexts to seaudit.
	* Add support for filterting by level and clearance to seaudit.

2009-05-26  Jeremy Solt <jsolt@tresys.com>

	* Modified seaudit to show the raw audit message when doubleclicking
	an entry.

2009-05-19  Steve Lawrence <slawrence@tresys.com>

	* Add libqpol and libapol support for policy capabilites and
	permissive domains.
	* Add policy capabilities and permissive domains querying to seinfo.

2009-05-15  Jeremy Solt <jsolt@tresys.com>

	* Add support for using attribute names available in version 24
	binary policies.

2008-09-11  J. Tang  <jtang@tresys.com>

	* Fixed error in qpol_policy_rebuild_opt() where a policy's
	neverallow rules are expanded when the rebuild option is
	QPOL_POLICY_OPTION_NO_RULES.

2008-08-15  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.5.

	* Fixed errors in libapol's AV and TE rule rendering functions
	where errno was not being set properly.
	
	* Fixed error in apol_syn_avrule_render() where braces were not
	being added around the target set when there is exactly one target
	type and the keyword 'self'.  Thanks to Ryan Kagin for reporting
	this error.

2008-08-14  J. Tang  <jtang@tresys.com>

	* Synched libqpol to libsepol version 2.0.32, policy parser to
	2.0.16.

	* Synched libqpol to libsepol version 2.0.26, policy parser to
	2.0.14.
